--- a/app/src/main/res/layout/activity_invite_friends_screen.xml
+++ b/app/src/main/res/layout/activity_invite_friends_screen.xml
@@ -16,7 +16,7 @@
         >
 
         <ImageView
-            android:id="@+id/invite_earn"
+            android:id="@+id/gift_iview"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_centerHorizontal="true"
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_margin="5dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/invite_earn"
+            android:layout_below="@+id/gift_iview"
             android:text="Invite friends and make money."
             android:textSize="20dp"
             android:layout_gravity="center"
@@ -49,7 +49,7 @@
             android:text="Referal Code"
             android:gravity="center"
             android:textSize="15dp"
-            android:layout_above="@+id/referal_code_text"
+            android:layout_above="@+id/referal_code_text_2"
             android:textColor="@color/white"
             android:lineSpacingExtra="3dp"
             />
@@ -58,9 +58,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text=""
-            android:id="@+id/referal_code_text"
+            android:id="@+id/referal_code_text_2"
             android:textColor="#FFFFFF"
-            android:layout_above="@+id/share"
+            android:layout_above="@+id/share_2"
             android:textSize="25dp"
             android:gravity="center"/>
 
@@ -68,7 +68,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/share"
+            android:id="@+id/share_2"
             android:orientation="horizontal"
             android:gravity="center_horizontal"
             android:layout_margin="5dp"
