influencer pgm detail screen

--- a/app/src/main/res/layout/activity_invite_friends_screen.xml
+++ b/app/src/main/res/layout/activity_invite_friends_screen.xml
@@ -31,10 +31,11 @@
             android:id="@+id/target_title"
             android:layout_width="match_parent"
             android:layout_margin="5dp"
+            android:paddingTop="15dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/gift_iview"
-            android:text="Invite friends and make money."
-            android:textSize="20dp"
+            android:text="Invite friends and make money.The more you invite, the more you earn."
+            android:textSize="18sp"
             android:layout_gravity="center"
             android:gravity="center"
             android:textColor="@color/white"
