--- a/app/src/main/res/layout/activity_setting_screen.xml
+++ b/app/src/main/res/layout/activity_setting_screen.xml
@@ -107,6 +107,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:id="@+id/coins_txt_btn"
                     android:orientation="vertical"
                     android:layout_height="match_parent">
 
@@ -127,6 +128,7 @@
                 <com.rey.material.widget.LinearLayout
                     android:layout_width="0dp"
                     android:gravity="center"
+                    android:id="@+id/bal_txt_btn"
                     android:layout_weight="1"
                     android:orientation="vertical"
                     android:layout_height="match_parent">
@@ -153,6 +155,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:id="@+id/invite_txt_btn"
                     android:orientation="vertical"
                     android:layout_height="match_parent">
 
