--- a/app/src/main/res/layout/fragment_follow_content_single_layout.xml
+++ b/app/src/main/res/layout/fragment_follow_content_single_layout.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="500dp">
 
@@ -22,6 +23,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
+                app:placeholderImage="@drawable/no_image"
+                app:placeholderImageScaleType="fitXY"
                 android:id="@+id/follow_frag_img_view1"
                 android:layout_weight="1">
 
@@ -32,6 +35,8 @@
                 android:id="@+id/follow_frag_img_view2"
                 android:scaleType="fitXY"
                 android:layout_height="match_parent"
+                app:placeholderImage="@drawable/no_image"
+                app:placeholderImageScaleType="fitXY"
                 android:layout_weight="1"
                 android:layout_marginTop="3dp">
 
@@ -45,6 +50,8 @@
             android:layout_width="match_parent"
             android:id="@+id/follow_frag_img_view3"
             android:layout_height="match_parent"
+            app:placeholderImage="@drawable/no_image"
+            app:placeholderImageScaleType="fitXY"
             android:scaleType="fitXY"
             android:layout_weight="1"
             android:orientation="vertical">
@@ -68,6 +75,8 @@
             android:orientation="horizontal">
 
             <com.facebook.drawee.view.SimpleDraweeView
+                app:placeholderImage="@drawable/no_image"
+                app:placeholderImageScaleType="fitXY"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:scaleType="fitXY"
@@ -78,12 +87,16 @@
             <com.facebook.drawee.view.SimpleDraweeView
                 android:layout_marginRight="3dp"
                 android:id="@+id/follow_frag_img_view5"
+                app:placeholderImage="@drawable/no_image"
+                app:placeholderImageScaleType="fitXY"
                 android:layout_width="0dp"
                 android:scaleType="fitXY"
                 android:layout_weight="1"
                 android:layout_height="match_parent" />
 
             <com.facebook.drawee.view.SimpleDraweeView
+                app:placeholderImage="@drawable/no_image"
+                app:placeholderImageScaleType="fitXY"
                 android:layout_width="0dp"
                 android:id="@+id/follow_frag_img_view6"
                 android:layout_weight="1"
@@ -103,12 +116,16 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:scaleType="fitXY"
+                app:placeholderImage="@drawable/no_image"
+                app:placeholderImageScaleType="fitXY"
                 android:id="@+id/follow_frag_img_view7"
                 android:layout_marginRight="3dp"
                 android:layout_height="match_parent" />
 
             <com.facebook.drawee.view.SimpleDraweeView
                 android:layout_marginRight="3dp"
+                app:placeholderImage="@drawable/no_image"
+                app:placeholderImageScaleType="fitXY"
                 android:id="@+id/follow_frag_img_view8"
                 android:scaleType="fitXY"
                 android:layout_width="0dp"
@@ -116,8 +133,11 @@
                 android:layout_height="match_parent" />
 
             <com.facebook.drawee.view.SimpleDraweeView
+                app:placeholderImage="@drawable/no_image"
+                app:placeholderImageScaleType="fitXY"
                 android:layout_width="0dp"
                 android:id="@+id/follow_frag_img_view9"
+                android:src="@drawable/no_image"
                 android:scaleType="fitXY"
                 android:layout_weight="1"
                 android:layout_height="match_parent" />
