--- a/app/src/main/res/layout/activity_category_content_list.xml
+++ b/app/src/main/res/layout/activity_category_content_list.xml
@@ -1,6 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/categ_cont_main_fl"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
