--- a/app/src/main/res/layout/activity_content_list_screen.xml
+++ b/app/src/main/res/layout/activity_content_list_screen.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/content_list_screen_ll"
     android:layout_height="match_parent"
     tools:context=".UI.Activity.ContentListScreen">
 
