--- a/app/src/main/res/layout/activity_post_video_youtube_content.xml
+++ b/app/src/main/res/layout/activity_post_video_youtube_content.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+
+<android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/post_youtube_con_main"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+    <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -324,3 +333,6 @@
 
     </LinearLayout>
 </ScrollView>
+
+
+</android.support.design.widget.CoordinatorLayout>
