--- a/app/src/main/res/layout/activity_tab_search2.xml
+++ b/app/src/main/res/layout/activity_tab_search2.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/tab_search_activity_ll"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:orientation="vertical">
@@ -72,8 +73,9 @@
 
 
         <FrameLayout
+            android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
@@ -93,6 +95,12 @@
 
         </FrameLayout>
 
+
+        <FrameLayout
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -103,6 +111,15 @@
 
         </android.support.v7.widget.RecyclerView>
 
+            <ProgressBar
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:id="@+id/progressBar_catg"
+                android:layout_centerInParent="true"/>
+
+
+        </FrameLayout>
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
