--- a/app/src/main/res/layout/adapter_interest_trending.xml
+++ b/app/src/main/res/layout/adapter_interest_trending.xml
@@ -54,6 +54,30 @@
                     />
 
             </LinearLayout>
+
+
+<!--            <com.tuyenmonkey.mkloader.MKLoader
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:mk_color="@color/white"
+                android:visibility="visible"
+                app:mk_type="ThreePulse"
+                android:id="@+id/loader_trending_interests"
+                /> -->
+
+<!--
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="visible"
+                android:id="@+id/loader_trending_interests"
+                />
+-->
+
+
+
         </FrameLayout>
     </android.support.v7.widget.CardView>
 
