--- a/app/src/main/res/layout/fragment_follow_fragments.xml
+++ b/app/src/main/res/layout/fragment_follow_fragments.xml
@@ -1,26 +1,67 @@
-<android.support.v4.widget.NestedScrollView
+<android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/follow_frag_ll_main"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:id="@+id/follow_frag_categories_recycler_view"
-        android:layout_height="80dp"
-        android:layout_marginTop="10dp"
-        xmlns:android="http://schemas.android.com/apk/res/android" />
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/follow_frag_content_recycler_view"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+
+                <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:id="@+id/follow_frag_categories_recycler_view"
+                android:layout_height="80dp"
+                android:layout_marginTop="10dp"
+                xmlns:android="http://schemas.android.com/apk/res/android" />
+
+                <ProgressBar
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:id="@+id/follow_cat_progressbar"
+                    android:layout_height="wrap_content" />
+
+            </FrameLayout>
+
+            <com.rey.material.widget.FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/follow_frag_content_recycler_view"/>
+
+
+                <ProgressBar
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:id="@+id/follow_contents_progressbar"
+                    android:layout_height="wrap_content" />
+
+
+            </com.rey.material.widget.FrameLayout>
+
+
+        </LinearLayout>
+
+
+    </android.support.v4.widget.NestedScrollView>
+
+</android.support.design.widget.CoordinatorLayout>
