--- a/app/src/main/res/layout/fragment_for_you_new.xml
+++ b/app/src/main/res/layout/fragment_for_you_new.xml
@@ -1,3 +1,12 @@
+<android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/follow_for_u_new"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+
 <android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -28,3 +37,6 @@
     </FrameLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
