--- a/app/src/main/res/layout/activity_tab_account.xml
+++ b/app/src/main/res/layout/activity_tab_account.xml
@@ -14,10 +14,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:descendantFocusability="blocksDescendants"
+        >
 
             <ProgressBar
                 android:layout_width="80dp"
